# iyse4620-birdcall-distributions

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  report.md
app/: package-lock.json  package.json  svelte.config.js  vite.config.js
app/src/: app.html
app/src/lib/: NavBar.svelte  Table.svelte
app/src/lib/docs/: DataMatter.md  EarthEngineMatter.md  FrontMatter.md  PlotMatter.md  TraceMatter.md  Traces.md
app/src/routes/: +layout.svelte  +page.svelte  ModelOptions.svelte  TraceSummary.md
app/src/routes/earth-engine/: +page.svelte
app/src/routes/status/: +server.js
birdcall_distribution/: data.py  geo.py  model.py  plot.py  utils.py
birdcall_distribution/commands/: bird_name_mapping.py  earth_engine.py  earth_engine_assets.py  generate_manifest.py  model_assets.py
data/: earth_engine.parquet  earth_engine_v2.parquet  ee_v3_americas_2.parquet  ee_v3_americas_5.parquet  ee_v3_ca_1.parquet  ee_v3_western_us_2.parquet
nginx/: nginx.conf
notebooks/: 2022-09-05-single-cog.ipynb  2022-10-21-latlon.ipynb  2022-11-08-earth-engine-test.ipynb  2022-11-09-earth-engine-data-plots.ipynb  2022-11-10-adjacency-matrix.ipynb  2022-11-11-car-model.ipynb  2022-11-11-grid-sizes.ipynb  2022-11-12-ee-v3.ipynb  2022-11-12-pymc4-repro.ipynb  2022-11-12-western-us.ipynb  2022-11-16-modeling-imputed.ipynb  2022-11-27-more-modeling.ipynb  2022-11-29-model-comparison.ipynb  2022-11-29-more-modeling.ipynb  2022-12-01-model-latex.ipynb  2022-12-02-plots.ipynb  2022-12-02-svss.ipynb  2022-12-03-calculate-sparsity.ipynb  2022-12-03-model-comparison-updated.ipynb  2022-12-03-plots-no-slope.ipynb  2022-12-04-plots.ipynb  2022-12-04-quail.ipynb  2022-12-09-americas-basic-modeling.ipynb  2022-12-09-americas-grid.ipynb  2022-12-09-na-sa-shapes.ipynb
report/: citation.bib  report.tex
terraform/: main.tf
